[tool.poetry]
name = "discord-interactions"
version = "0.2.0"
description = "Useful tools for using the Discord Interactions API"
authors = ["Ian Webster <ianw_pypi@ianww.com>"]
maintainers = ["Ian Webster <ianw_pypi@ianww.com>"]
keywords = ["discord"]
readme = "README.md"
repository = "https://github.com/discord/discord-interactions-python"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
